--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,30 @@
-# http://www.gnu.org/software/automake
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Generatore IP Casuale e Ricerca Google</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
-Makefile.in
-/ar-lib
-/mdate-sh
-/py-compile
-/test-driver
-/ylwrap
-.deps/
-.dirstamp
+    <div class="container">
+        <h1>Generatore IP Casuale</h1>
+        <div class="ip-display-box">
+            <p>Il tuo IP casuale è:</p>
+            <h2 id="random-ip">---.---.---.---</h2>
+            <button id="generate-ip-btn">Genera Nuovo IP</button>
+        </div>
 
-# http://www.gnu.org/software/autoconf
+        <div class="divider"></div>
 
-autom4te.cache
-/autoscan.log
-/autoscan-*.log
-/aclocal.m4
-/compile
-/config.cache
-/config.guess
-/config.h.in
-/config.log
-/config.status
-/config.sub
-/configure
-/configure.scan
-/depcomp
-/install-sh
-/missing
-/stamp-h1
+        <h1>Ricerca Google</h1>
+        <div class="search-box">
+            <input type="text" id="search-input" placeholder="Cerca su Google...">
+            <button id="search-btn">Cerca</button>
+        </div>
+    </div>
 
-# https://www.gnu.org/software/libtool/
-
-/ltmain.sh
-
-# http://www.gnu.org/software/texinfo
-
-/texinfo.tex
-
-# http://www.gnu.org/software/m4/
-
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
-
-# Generated Makefile
-# (meta build system like autotools,
-# can automatically generate from config.status script
-# (which is called by configure script))
-Makefile
+    <script src="js/script.js"></script>
+</body>
+</html>
